//
// Copyright 2025 MunrChat Messenger, LLC
// SPDX-License-Identifier: AGPL-3.0-only
//

syntax = "proto3";

// iOS - package name determines class prefix
package RegistrationProtos;

option java_multiple_files = true;
option java_package = "org.MunrChat.registration.proto";

message RegistrationProvisionEnvelope {
  bytes publicKey = 1;
  bytes body = 2; // Encrypted RegistrationProvisionMessage
}

message RegistrationProvisionMessage {
  enum Platform {
    ANDROID = 0;
    IOS = 1;
  }

  enum Tier {
    FREE = 0;
    PAID = 1;
  }

  string e164 = 1;
  bytes aci = 2;
  string accountEntropyPool = 3;
  string pin = 4;
  Platform platform = 5;
  uint64 backupTimestampMs = 6;
  optional Tier tier = 7;
  uint64 backupSizeBytes = 8;
  string restoreMethodToken = 9;
  bytes aciIdentityKeyPublic = 10;
  bytes aciIdentityKeyPrivate = 11;
  bytes pniIdentityKeyPublic = 12;
  bytes pniIdentityKeyPrivate = 13;
  uint64 backupVersion = 14;
  bytes lastBackupForwardSecrecyToken = 15;
  bytes nextBackupSecretData = 16;
}
